2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c: Make sure that the cursor is always shown when
	the selection changes.

2000-05-30  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-container.h,
	e-table-group-leaf.c, e-table-group-leaf.h, e-table-group.c,
	e-table-group.h, e-table-item.c, e-table-item.h, e-table.c,
	e-table.h, test-check.c, test-cols.c, test-table.c: Fixed a bunch
	of selection bugs.  Removed "spreadsheet" argument (for now.)
	Added "cursor_mode" argument.  Added "cursor_change" signal.
	Temporarily removed "selection_mode" argument.

2000-05-28  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c: Fixed setting of arguments.

2000-05-28  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-leaf.c,
	e-table-group.c, e-table-group.h, e-table-item.c, e-table-item.h,
	e-table.c, e-table.h: Added double click handling.

2000-05-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c, e-cell-text.h: Added "strikeout_column" argument.

2000-05-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-container.h,
	e-table-group-leaf.c, e-table-group-leaf.h, e-table.c, e-table.h:
	Made "drawgrid", "drawfocus", "spreadsheet", and
	"length_threshold" arguments set from the ETable effect all the
	end ETableItems.

	* e-table-header.c: Made column resize a bit less bumpy.

2000-05-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header.c: Account for extra pixel at right end of
	ETable.

	* e-table-item.c: Make grid less intrusive.

	* e-table.c: Make scrollbars disappear when appropriate.

2000-05-25  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Made dragging columns work.

2000-05-23  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Fixed the remove column callback.
