@@ -1,5 +1,9 @@
 2000-05-30  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-cell-text.c, e-cell-text.h: Added bold column's to ECellText.
+
+2000-05-30  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-item.c: Make sure that the cursor is always shown when
 	the selection changes.
 
